# web_portfolio

./: pyproject.toml
personal_portfolio/: settings.py
projects/: views.py
projects/migrations/: 0001_initial.py  0002_project_image.py
uploads/project_images/: mobile-ui-ux-concept-illustration_114360-11217.avif
